--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 
+  <link href="
+        https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
+        " rel="stylesheet">
+
+  <link href="modal.css" rel="stylesheet" type="text/css" />
+
   <link href="style.css" rel="stylesheet" type="text/css" />
+
 </head>
 
 <body>
@@ -35,8 +42,89 @@
   </div>
 
   <div class="city-gallery">
-
+    <h2 class="city-gallery-title">Донецьк = це Україна</h2>
+    <div class="wrapper">
+      <div class="gallery">
+        <button class="gallery-button" data-micromodal-trigger="modal" data-index="0">
+          <img class="gallery-image" src="img/1.jpg" alt="Donetsk Ukraine">
+        </button>
+        <button class="gallery-button" data-micromodal-trigger="modal" data-index="1">
+          <img class="gallery-image" src="img/2.jpg" alt="the church">
+        </button>
+        <button class="gallery-button" data-micromodal-trigger="modal" data-index="2">
+          <img class="gallery-image" src="img/3.jpg" alt="парк кованих фігур">
+        </button>
+        <button class="gallery-button" data-micromodal-trigger="modal" data-index="3">
+          <img class="gallery-image" src="img/4.jpg" alt="Цирк">
+        </button>
+        <button class="gallery-button" data-micromodal-trigger="modal" data-index="4">
+          <img class="gallery-image" src="img/5.jpg" alt="Вигляд міста">
+        </button>
+        <button class="gallery-button" data-micromodal-trigger="modal" data-index="5">
+          <img class="gallery-image" src="img/6.jpg" alt="Набережна">
+        </button>
+        <button class="gallery-button" data-micromodal-trigger="modal" data-index="6">
+          <img class="gallery-image" src="img/7.jpg" alt="Терекон">
+        </button>
+        <button class="gallery-button" data-micromodal-trigger="modal" data-index="7">
+          <img class="gallery-image" src="img/8.jpg" alt="Донбасс арена">
+        </button>
+      </div>
+    </div>
   </div>
+
+  <div class="modal micromodal-slide" id="modal" aria-hidden="true">
+    <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+      <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-title">
+        <header class="modal__header">
+          <h2 class="modal__title" id="modal-title">
+            Cвітлини міста Донецька
+          </h2>
+          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+        </header>
+        <main class="modal__content" id="modal-content">
+          <div class="splide" role="group" aria-label="city-gallery">
+            <div class="splide__track">
+              <ul class="splide__list">
+                <li class="splide__slide">
+                  <img src="img/1.jpg" alt="">
+                </li>
+                <li class="splide__slide">
+                  <img src="img/2.jpg" alt="">
+                </li>
+                <li class="splide__slide">
+                  <img src="img/3.jpg" alt="">
+                </li>
+                <li class="splide__slide">
+                  <img src="img/4.jpg" alt="">
+                </li>
+                <li class="splide__slide">
+                  <img src="img/5.jpg" alt="">
+                </li>
+                <li class="splide__slide">
+                  <img src="img/6.jpg" alt="">
+                </li>
+                <li class="splide__slide">
+                  <img src="img/7.jpg" alt="">
+                </li>
+                <li class="splide__slide">
+                  <img src="img/8.jpg" alt="">
+                </li>
+              </ul>
+            </div>
+          </div>
+        </main>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
+
+  <script src="
+        https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
+        "></script>
+
+  <script src="gallery.js"></script>
 
 </body>
 
